# obs-file-change-handler

./: .gitignore  README.md  ofch.spec  pyproject.toml
.github/workflows/: python-app.yml
src/obs_file_change_handler/: __main__.py  config.py  file_mover.py  single_instance.py
tests/: README.md  test_config.py  test_single_instance.py
