[project]
authors = [
    {name = "Dennis Sitelew", email = "yowidin@gmail.com"},
]
requires-python = "<3.14,>=3.10"
dependencies = [
    "paramiko<4.0.0,>=3.5.1",
    "pydantic>=2.11.5",
    "tomlkit>=0.13.3",
    "python-dateutil<3.0.0.0,>=2.9.0.post0",
    "tqdm<5.0.0,>=4.67.1",
    "psutil<8.0.0,>=7.0.0",
]
name = "obs-file-change-handler"
version = "0.1.0"
description = "Move old OBS recording files to a remote host"
readme = "README.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=obs_file_change_handler"
pythonpath = ["src"]

[project.scripts]
obs-move-files = "obs_file_change_handler.__main__:main"

[dependency-groups]
dev = [
    "pytest<9.0.0,>=8.3.3",
    "pytest-cov<7.0.0,>=6.0.0",
    "coverage<8.0.0,>=7.6.7",
    "pytest-mock<4.0.0,>=3.14.0",
    "pyinstaller<7.0.0,>=6.11.1",
]

[tool.pdm.build]
includes = ["src/obs_file_change_handler"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

